# Bionik-game-CC

./: CMakeLists.txt  README.md  main.cpp  rules for gamepads
Common-utils/: CMakeLists.txt  datacollector.h  joypick.cpp  main.cpp  mapelements.cpp  mapelements.h  qjoystick.cpp  qjoystick.h  threader.cpp  threader.h
GUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Komunikacja/: mainkomunikacja.cpp  mainkomunikacja.h
Konfiguracja/: 99-Bionik.rules  konfiguracja.sh  konfiguracja.sh~
Priorytetyzator/: mainpriorytetyzator.cpp  mainpriorytetyzator.h
Rozpoznawator/: block.cpp  block.h  mainrozpoznawator.cpp  mainrozpoznawator.h  rozpoznawator_functions.h
Sterowanie_joystick/: CMakeLists.txt  main.cpp  mainjoystick.cpp  mainjoystick.h  qjoystick.cpp  qjoystick.h
Sterowanie_klocki/: mainklocki.cpp  mainklocki.h
Walidator/: mainwalidator.cpp  mainwalidator.h
